# cc-splitter

./: CMakeLists.txt  README.md  ast.cc  ast.h  splitter.cc  test.cc
